Running Some tests
Just seeing if my changes go through

--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -1,10 +1,17 @@
-<h3>Your hand:</h3>
+<h3>Your hand TESTING:</h3>
 
 <script>
   const gameId = '<%= gameId %>';
 
   // Fetch the current users cards here from `/games/${gameId}/cards`
-
+  var myRequest = new XMLHttpRequest();
+  myRequest.open('GET', '/games/${gameId}/cards');
+  myRequest.onreadystatechange = function () {
+   if (myRequest.readyState === 4)
+   {
+     document.getElementById('ajax-content').innerHTML = myRequest.responseText;
+   }
+ }
 
 
   const checkExchangeStatus = function(){
