--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -1,8 +1,8 @@
-<!DOCTYPE html>  
-<html lang="en">  
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Space Between Poker Server</title>
+    <title>Space Between Poker Server - Alex Edition</title>
     <meta name="description" content="">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
