--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -4,17 +4,6 @@
   const gameId = '<%= gameId %>';
 
   // Fetch the current users cards here from `/games/${gameId}/cards`
-  function handleStateChange() {
-    //  4 is yes
-      if (request.readyState === 4) {
-
-          if (this.status >= 200 && this.status < 300) {
-
-              var elm = document.getElementById("js_script");
-              elm.innerHTML = request.responseText;
-          }
-      }
-  }
   function sendRequest() {
       var request = new XMLHttpRequest();
       request.open('GET', '/games/${gameId}/cards', false);
@@ -27,7 +16,7 @@
 
               if (this.status >= 200 && this.status < 300) {
 
-                  var elm = document.getElementById("js_script");
+                  var elm = document.getElementById("http://deckofcardsapi.com/");
                   elm.innerHTML = request.responseText;
               }
           }
