Need to run function while party has loaded in

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -14,7 +14,7 @@
           <option>6</option>
         </select>
       </div>
-      <input type="submit" class="btn btn-primary btn-block" onClick="send_with_ajax()" value="Start Game" />
+      <input type="submit" class="btn btn-primary btn-block" onClick="sendcardrequest()" value="Start Game" />
     </form>
     </div>
     </div>
@@ -27,7 +27,7 @@
         <label for="gameId">Enter game ID:</label>
         <input class="form-control" id="gameId" name="gameId" />
       </div>
-      <input type="submit" class="btn btn-primary btn-block" onClick="send_with_ajax()" value="Join Game" />
+      <input type="submit" class="btn btn-primary btn-block" onClick="sendcardrequest()" value="Join Game" />
     </form>
   </div>
 </div>
