--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -4,26 +4,7 @@
   const gameId = '<%= gameId %>';
 
   // Fetch the current users cards here from `/games/${gameId}/cards`
-//  function sendRequest() {
-//var request = new XMLHttpRequest();
-//request.open('GET', '/games/${gameId}/cards', false);
-  //   request.onreadystatechange = handleStateChange;
-//request.send(null);
-//
-//function handleStateChange() {
-        //  4 is yes
-      //    if (request.readyState === 4) {
-//
-//if (this.status >= 200 && this.status < 300) {
-//
-          //        var elm = document.getElementById("http://deckofcardsapi.com/");
-          //        elm.innerHTML = request.responseText;
-          //    }
-//}
-//  }
-//  }
-
-function send_with_ajax( ){
+function sendcardrequest(){
 
     xhr.open("GET", "/games/${gameId}/cards", true);
     xhr.overrideMimeType('text/plain; charset=x-user-defined');
@@ -35,7 +16,7 @@ function send_with_ajax( ){
                 var image = document.getElementById("get_img");
                 image.src = "data:image/gif;base64," + encode64(xhr.responseText);
             }else{
-                alert("Something misconfiguration : " +
+                alert("Not working : " +
                     "\nError Code : " + xhr.status +
                     "\nError Message : " + xhr.responseText);
             }
@@ -47,6 +28,7 @@ function send_with_ajax( ){
   const checkExchangeStatus = function(){
     $.ajax(`/games/${gameId}/allExchanged`).done(function(data, textStatus, xhr){
       if (xhr.status !== 202) { // not pending
+        sendcardrequest()
         document.location = `/games/${gameId}/result`;
       }
     })
