--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -4,7 +4,7 @@
   const gameId = '<%= gameId %>';
 
   // Fetch the current users cards here from `/games/${gameId}/cards`
-function sendcardrequest(){
+const sendcardrequest = function(){
 
     xhr.open("GET", "/games/${gameId}/cards", true);
     xhr.overrideMimeType('text/plain; charset=x-user-defined');
@@ -28,7 +28,7 @@ function sendcardrequest(){
   const checkExchangeStatus = function(){
     $.ajax(`/games/${gameId}/allExchanged`).done(function(data, textStatus, xhr){
       if (xhr.status !== 202) { // not pending
-        sendcardrequest()
+
         document.location = `/games/${gameId}/result`;
       }
     })
