--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -4,25 +4,20 @@
   const gameId = '<%= gameId %>';
 
   // Fetch the current users cards here from `/games/${gameId}/cards`
-const sendcardrequest = function(){
+  var xhr = new XMLHttpRequest();
 
-    xhr.open("GET", "/games/${gameId}/cards", true);
-    xhr.overrideMimeType('text/plain; charset=x-user-defined');
-    xhr.send(null);
+  xhr.onreadystatechange = cardcallback;
 
-    xhr.onreadystatechange = function() {
-        if (xhr.readyState == 4){
-            if ((xhr.status == 200) || (xhr.status == 0)){
-                var image = document.getElementById("get_img");
-                image.src = "data:image/gif;base64," + encode64(xhr.responseText);
-            }else{
-                alert("Not working : " +
-                    "\nError Code : " + xhr.status +
-                    "\nError Message : " + xhr.responseText);
-            }
-        }
-    };
-}
+  function cardcallback() {
+      if (xhr.readyState == 4){
+        return;
+      }
+      if (xhr.readyState !== 200){
+        return;
+      }
+      xhr.open("GET", "/games/${gameId}/cards", true);
+  }
+
 
 
   const checkExchangeStatus = function(){
